# panpath

./: .coveragerc  .gitignore  404.html  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  STATUS.md  examples.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini  verify.py
.github/workflows/: build.yml  docs.yml
about/changelog/: index.html
about/cloudpathlib-compat/: index.html
about/contributing/: index.html
about/license/: index.html
advanced/configuration/: index.html
advanced/custom-clients/: index.html
advanced/performance/: index.html
advanced/testing/: index.html
api/async-pan-path/: index.html
api/azure/: index.html
api/exceptions/: index.html
api/gcs/: index.html
api/local/: index.html
api/pan-path/: index.html
api/panpath/: index.html
api/panpath.azure_async_client/: index.html
api/panpath.azure_client/: index.html
api/panpath.azure_path/: index.html
api/panpath.base/: index.html
api/panpath.clients/: index.html
api/panpath.cloud/: index.html
api/panpath.exceptions/: index.html
api/panpath.gs_async_client/: index.html
api/panpath.gs_client/: index.html
api/panpath.gs_path/: index.html
api/panpath.local_path/: index.html
api/panpath.registry/: index.html
api/panpath.s3_async_client/: index.html
api/panpath.s3_client/: index.html
api/panpath.s3_path/: index.html
api/s3/: index.html
docs/: README.md  index.md  style.css
docs/about/: changelog.md  cloudpathlib-compat.md  contributing.md  license.md
docs/advanced/: configuration.md  custom-clients.md  performance.md  testing.md
docs/api/: async-pan-path.md  azure.md  exceptions.md  gcs.md  local.md  pan-path.md  panpath.azure_async_client.md  panpath.azure_client.md  panpath.azure_path.md  panpath.base.md  panpath.clients.md  panpath.cloud.md  panpath.exceptions.md  panpath.gs_async_client.md  panpath.gs_client.md  panpath.gs_path.md  panpath.local_path.md  (+6 more)
omegapath/: __init__.py  azure_async.py  azure_async_client.py  azure_client.py  azure_sync.py  base.py  clients.py  exceptions.py  gs_async.py  gs_async_client.py  gs_client.py  gs_sync.py  local_async.py  local_sync.py  registry.py  router.py  s3_async.py  s3_async_client.py  s3_client.py  s3_sync.py
panpath/: __init__.py  azure_async.py  azure_async_client.py  azure_client.py  azure_path.py  azure_sync.py  base.py  clients.py  cloud.py  exceptions.py  gs_async.py  gs_async_client.py  gs_client.py  gs_path.py  gs_sync.py  local_async.py  local_path.py  local_sync.py  registry.py  router.py  s3_async.py  s3_async_client.py  s3_client.py  s3_path.py  s3_sync.py
search/: search_index.json
tests/: conftest.py  test_azure.py  test_azure_async_client.py  test_azure_client.py  test_base.py  test_cloudpath.py  test_cloudpath_compat.py  test_exceptions.py  test_gs.py  test_gs_async_client.py  test_gs_client.py  test_init.py  test_local.py  test_mkdir.py  test_new_methods.py  test_registry.py  test_router.py  test_s3.py  test_s3_async_client.py  test_s3_client.py  test_symlink_relative.py  utils.py
(+62 files in other folders)
